compiler-core/src/snapshots/gleam_core__config__barebones_package_config_to_json.snap
---
source: compiler-core/src/config.rs
expression: json
---
{"name":"my_project","version":"1.0.0"}
